--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "personal-site",
   "version": "4.0.0",
-  "homepage": "https://mldangelo.com/",
+  "homepage": "https://sstha.github.io/[personal-site - default:personal-site]",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mldangelo/personal-site.git"
+    "url": "https://github.com/sstha/personal-site.git"
   },
   "engines": {
     "node": ">=14.x"
