--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -8,7 +8,7 @@ jobs:
   deployment:
     runs-on: ubuntu-20.04
     timeout-minutes: 5
-    environment: production
+    environment: development
     steps:
     - name: Checkout
       uses: actions/checkout@v3
