--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-site",
   "version": "4.0.0",
-  "homepage": "https://sstha.github.io/[personal-site - default:personal-site]/",
+  "homepage": "https://sstha.github.io/[personal-site]/",
   "license": "MIT",
   "repository": {
     "type": "git",
