--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -8,7 +8,7 @@ jobs:
   deployment:
     runs-on: ubuntu-20.04
     timeout-minutes: 5
-    environment: development
+    environment: production
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -22,11 +22,11 @@ jobs:
       run: npm ci
     - name: Build and Deploy
       env:
-        NODE_ENV: development
+        NODE_ENV: production
         # This is set automatically by github
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-          git config user.name "sstha"
-          git config user.email "shweta.shrestha@gmail.com"
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/sstha/personal-site.git
           npm run deploy
