--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sstha/sstha.github.io"
+    "url": "https://github.com/sstha/sstha.github.io.git"
   },
   "engines": {
     "node": ">=14.x"
